src/test/ui/rfc1598-generic-associated-types/empty_generics.stderr
error: expected one of `>`, identifier, or lifetime, found `,`
  --> $DIR/empty_generics.rs:15:14
   |
LL |     type Bar<,>;
   |              ^ expected one of `>`, identifier, or lifetime here

warning: the feature `generic_associated_types` is incomplete and may cause the compiler to crash
  --> $DIR/empty_generics.rs:11:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

